--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -59,24 +59,24 @@ jobs:
           java-version: '21'
           distribution: 'temurin' # Or other supported distributions like 'zulu', 'adopt', etc.
           cache: 'maven'
-      - name: build
-        run: |
-          mvn install -Paws -DskipTests
-          mvn install -Pgcp -DskipTests
-        working-directory: autoscaler
+#      - name: build
+#        run: |
+#          mvn install -Paws -DskipTests
+#          mvn install -Pgcp -DskipTests
+#        working-directory: autoscaler
       - name: Tag Version
         id: tag_version
         run: |
           echo "tag_version=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_OUTPUT
           echo "release_name=v$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_OUTPUT
         working-directory: autoscaler
-      - name: deploy docker container
-        run: |
-          docker build -t bourgeoisiehacker/autoscaler:latest -f Dockerfile .
-          docker tag bourgeoisiehacker/autoscaler:latest docker.io/bourgeoisiehacker/autoscaler:${{steps.tag_version.outputs.tag_version}}
-          docker tag bourgeoisiehacker/autoscaler:latest docker.io/bourgeoisiehacker/autoscaler:latest
-          docker push  docker.io/bourgeoisiehacker/autoscaler:${{steps.tag_version.outputs.tag_version}}
-          docker push  docker.io/bourgeoisiehacker/autoscaler:latest
+#      - name: deploy docker container
+#        run: |
+#          docker build -t bourgeoisiehacker/autoscaler:latest -f Dockerfile .
+#          docker tag bourgeoisiehacker/autoscaler:latest docker.io/bourgeoisiehacker/autoscaler:${{steps.tag_version.outputs.tag_version}}
+#          docker tag bourgeoisiehacker/autoscaler:latest docker.io/bourgeoisiehacker/autoscaler:latest
+#          docker push  docker.io/bourgeoisiehacker/autoscaler:${{steps.tag_version.outputs.tag_version}}
+#          docker push  docker.io/bourgeoisiehacker/autoscaler:latest
       - name: set helm chart version to current version
         run: |
           yq -i '.version = "${{steps.tag_version.outputs.tag_version}}"' Chart.yaml
@@ -87,9 +87,11 @@ jobs:
           helm package helm/charts/nimbus-run
           helm repo index . --merge docs/index.yaml
       - name: Create and push tag
-        run: |
-          git tag -a ${{ steps.tag_version.outputs.release_name }} -m "Automated tag created on ${{ steps.tag_version.outputs.release_name }}"
-          git push origin ${{ steps.tag_version.outputs.release_name }}
+        uses: rickstaa/action-create-tag@v1
+        with:
+          tag: ${{ steps.tag_version.outputs.release_name }}
+          message: "Automated tag ${{ steps.tag_version.outputs.release_name }}"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
       - name: Generate Changelog
         id: changelog
         uses: requarks/changelog-action@v1
