chore: update version

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -110,9 +110,8 @@ jobs:
             nimbus-run-${{steps.tag_version.outputs.tag_version}}.tgz
       - name: Pull Remote Changes
         run: |
-          git stash
+          git status
           git pull -r
-          git stash pop
       - name: package helm
         run: |
           helm package helm/charts/nimbus-run
