--- a/autoscaler/compute/Aws/pom.xml
+++ b/autoscaler/compute/Aws/pom.xml
@@ -32,6 +32,10 @@
             <version>2.4</version> <!-- Use latest -->
         </dependency>
         <dependency>
+            <groupId>org.snakeyaml</groupId>
+            <artifactId>snakeyaml-engine</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
             <version>[3.5.0,)</version>
