--- a/autoscaler/compute/ComputeApi/pom.xml
+++ b/autoscaler/compute/ComputeApi/pom.xml
@@ -25,5 +25,13 @@
             <artifactId>spring-boot-starter-logging</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
     </dependencies>
 </project>
