--- a/autoscaler/pom.xml
+++ b/autoscaler/pom.xml
@@ -29,6 +29,17 @@
             <artifactId>json</artifactId>
             <version>20250517</version>
         </dependency>
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>2.4</version> <!-- Use latest -->
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.snakeyaml/snakeyaml-engine -->
+        <dependency>
+            <groupId>org.snakeyaml</groupId>
+            <artifactId>snakeyaml-engine</artifactId>
+            <version>2.10</version>
+        </dependency>
     </dependencies>
 </dependencyManagement>
     <properties>
