--- a/autoscaler/autoscale/pom.xml
+++ b/autoscaler/autoscale/pom.xml
@@ -106,11 +106,19 @@
             <artifactId>common</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.5.0</version>
+        </dependency>
     </dependencies>
 
 
     <profiles>
         <profile>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
             <id>aws</id>
             <dependencies>
                 <dependency>
@@ -124,9 +132,7 @@
             </build>
         </profile>
         <profile>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
+
             <id>gcp</id>
             <dependencies>
                 <dependency>
