--- a/config_examples/config-aws.yaml
+++ b/config_examples/config-aws.yaml
@@ -13,7 +13,7 @@ logLevel: "info"
 retryPolicy:
 
   # The max duration a github action job can remain in a Queued state before retrying to process it.
-  # The job will be sent to the retry topic
+  # The job will be retried
   maxJobInQueuedInMinutes: 6
 
   # The minimum duration between attempting subsequent retries for a job.
