chore: adding new metrics and cleaning up logs

--- a/docker-compose-examples/aws/config-template.yaml
+++ b/docker-compose-examples/aws/config-template.yaml
@@ -3,8 +3,8 @@ computeType: aws
 logLevel: "info" # info | warn | debug | verbose. verbose option means debug mode but also dependencies are in debug mode. Of course  as a java springboot developer you can override these settings easily
 
 github:
-  groupName: "prod"
-  organizationName: "bourgeoisie-whacker"
+  groupName: ""  # prod
+  organizationName: ""  # bourgeoisie-whacker
   token: "" # This is the github token with permissions to interact with github actions
 
 compute:
