fix: all action pools in gcp are not default now

--- a/docker-compose-examples/gcp/compose.yaml
+++ b/docker-compose-examples/gcp/compose.yaml
@@ -2,10 +2,9 @@ version: "3.9"
 
 services:
   autoscaler:
-    image: bourgeoisiehacker/autoscaler:latest
+    image: bourgeoisiehacker/autoscaler:0.3.7
+    pull_policy: always
     environment:
-#      AWS_ACCESS_KEY_ID: <SETUP> # You can explicitly set AWS environment variables for authentication to AWS
-#      AWS_SECRET_ACCESS_KEY: <SETUP> # You can explicitly set AWS environment variables for authentication to AWS
       NIMBUS_RUN_CONFIGURATION_FILE: /opt/config.yaml
       SERVER_PORT: "8080"
     ports:
