--- a/integration-tests/Test/src/main/resources/gcp/workflows/test-os/nimbusconfig.yaml
+++ b/integration-tests/Test/src/main/resources/gcp/workflows/test-os/nimbusconfig.yaml
@@ -19,7 +19,7 @@ compute:
     idleScaleDownInMinutes: 10
     region: us-east-1
     subnet: subnet-257dbf7d
-    securityGroup: sg-0189c3298c7be64ca
+    securityGroups: ["sg-0189c3298c7be64ca"]
     #    credentialsProfile: #<------- if blank it'll just use the default Credentials provider
     diskSettings:
       type: "gp3" #Possible values gp3 | gp2 | io2 | io1| st1
