--- a/docker-compose-examples/config-template.yaml
+++ b/docker-compose-examples/config-template.yaml
@@ -12,7 +12,7 @@ compute:
     idleScaleDownInMinutes: 10 # This number should higher than 5 atleast. It takes a second for runner service to start
     region: "" # i.e us-east-2
     subnet: "" # subnet-id i.e subnet-1234
-    securityGroup: "" # security group id i.e sg-1234
+    securityGroups: [] # security group id i.e sg-1234
     diskSettings:
       type: "gp3" #Possible values gp3 | gp2 | io2 | io1| st1
       size: "20" # in gigs
